Fix bug with missing tooltip z-index and initialized positioning.

--- a/src/components/tooltip/tooltip.less
+++ b/src/components/tooltip/tooltip.less
@@ -61,6 +61,9 @@
   position: absolute;
   visibility: hidden;
   opacity: 0;
+  top: 0;
+  left: 0;
+  z-index: 10;
   transition: opacity 100ms, visibility 100ms;
   transition-delay: 100ms;
   &.ue-tooltip-show {
